# Under_Demo

./: .gitignore  CMakeLists.txt  README.md  key.jks  编译指令.txt
Classes/: AppDelegate.cpp  Connection.cpp  Connection.h  ConnectionStatue.cpp  ConnectionStatue.h  GameComponent.cpp  GameComponet.cpp  GameComponet.h  GameFrame.cpp  GameFrame.h  GameMap.cpp  GameMap.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  GameWorld.cpp  GameWorld.h  HelloWorldScene.cpp  HelloWorldScene.h  Joystick.h  MyMath.h  QuadTree.h  Random.h  SpritePool.cpp  SpritePool.h  Tools.h  _clang-format  iVec2.inl  json.h
Classes/game/game_frame/: GameFrame.cpp  GameFrame.h
Classes/game/game_map/: GameMap.cpp  GameMap.h
Classes/game/game_map/implements/: MapDecorationCreator1.cpp  MapDecorationCreator1.h  MapGenerator1.cpp  MapGenerator1.h  MapGenerator2.cpp  MapGenerator2.h  MapHelper1.cpp  MapHelper1.h  MapPhysics1.cpp  MapPhysics1.h  MapPreRenderer1.cpp  MapPreRenderer1.h
Classes/game/game_map/inplements/: MapGenerator2.h  MapHelper1.h  MapPhysics1.cpp  MapPhysics1.h
Classes/game/game_object/: GameObject.cpp  GameObject.h
Classes/game/game_object/implements/bullet/bullet_1/: Bullet1.cpp  Bullet1.h  Bullet1AI.cpp  Bullet1AI.h  Bullet1Physics.cpp  Bullet1Physics.h
Classes/game/game_object/implements/bullet/bullet_2/: Bullet2.cpp  Bullet2.h  Bullet2AI.cpp  Bullet2AI.h  Bullet2Physics.cpp  Bullet2Physics.h
Classes/game/game_object/implements/enemy/enemy_1/: Enemy1.cpp  Enemy1.h  Enemy1AI.cpp  Enemy1AI.h  Enemy1Physics.cpp  Enemy1Physics.h
Classes/game/game_object/implements/mpa_decoration/decoration_1/: Decoration1.cpp  Decoration1.h  Decoration1AI.cpp  Decoration1AI.h
Classes/game/game_object/implements/mpa_decoration/decoration_2/: Decoration2.cpp  Decoration2.h  Decoration2AI.cpp  Decoration2AI.h
Classes/game/game_object/implements/other/start_point/: StartPoint.cpp  StartPoint.h  StartPointAI.cpp  StartPointAI.h
Classes/game/game_object/implements/particle/particle_1/: Particle1.cpp  Particle1.h  Particle1AI.cpp  Particle1AI.h  Particle1Physics.cpp  Particle1Physics.h
Classes/game/game_object/implements/physics_component/: PhysicsComponent.cpp  PhysicsComponent.h
Classes/game/game_object/implements/player/player_1/: Player1.cpp  Player1.h  Player1AI.cpp  Player1AI.h  Player1Physics.cpp  Player1Physics.h
Classes/game/game_world/: GameWorld.cpp  GameWorld.h
Classes/game/game_world/implements/: WorldRenderer1.cpp  WorldRenderer1.h
Classes/scene/: GameScene.cpp  GameScene.h  RefLineLayer.cpp  RefLineLayer.h  StartScene.cpp  StartScene.h
Classes/utility/: GameObjectInfo.cpp  GameObjectInfo.h  QuadTree.h  SpritePool.cpp  SpritePool.h  Tools.h
Classes/utility/math/: MyMath.cpp  MyMath.h  Random.cpp  iVec2.h
Classes/utility/touch/: Joystick.cpp  TouchesPool.cpp  TouchesPool.h
Classes/web/: Connection.cpp  Connection.h  ConnectionStatue.cpp  ConnectionStatue.h
Resources/: demo-1.plist  demo_physics.plist  game_object_info.json  loadingPage.plist
Resources/game_object_info/: bullet_1.json
Server/: compile.sh  package-lock.json  package.json  tsconfig.json
Server/src/: connection.ts  connection_statue.ts  event.ts  game.ts  game_statue.ts  tools.ts  under_ground.ts
Server/src/connection_statues/: default.ts  ingame.ts  normal.ts  startgame.ts
Server/src/game_statues/: default.ts  start.ts
cocos2d/cocos/2d/: libcocos2d.vcxproj
cocos2d/cocos/editor-support/spine/proj.win32/: libSpine.vcxproj
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/jni/: Android.mk
proj.android/app/res/values/: strings.xml
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/Under.xcodeproj/: project.pbxproj
proj.ios_mac/Under_Demo.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: Under_Demo.sln  Under_Demo.vcxproj  Under_Demo.vcxproj.filters
use/: 11232.psd  2.psd  bullet1.psd  demo.tps  demo_physics.pes  grass.psd  出生点.psd  地灯.psd  小人.psd  小人action.psd  控制杆.psd  紫藤萝.psd  藤蔓1.psd  藤蔓2.psd  藤蔓3.psd
use/Res/: test.aseprite
